# ghostptr

./: Cargo.toml  LICENSE  README.md
examples/classic_injection/: Cargo.toml
examples/classic_injection/src/: main.rs
examples/pool_party/: Cargo.toml
examples/pool_party/src/: main.rs  utils.rs  winapi.rs
examples/pool_party/src/variants/: mod.rs  tp_direct_insertion.rs  tp_worker_factory.rs
src/: constants.rs  error.rs  lib.rs  utils.rs
src/iter/: handle.rs  mod.rs  module.rs  process.rs  system_module.rs  thread.rs  window.rs
src/misc/: handle_obj.rs  mod.rs
src/modules/: export.rs  import.rs  load_reason.rs  mod.rs  section.rs
src/patterns/: mod.rs  pattern16.rs  pattern32.rs  scanner.rs  utils.rs
src/process/: address.rs  current.rs  mod.rs  module.rs  pattern.rs  ptr.rs  region.rs  remote.rs  scan.rs  thread.rs  utils.rs
src/rtti/: mod.rs  module.rs  structs.rs
src/thread/: apc.rs  mod.rs  wait_result.rs
src/utils/: debug_privilege.rs  mod.rs
src/utils/handle/: mod.rs  object.rs  safe.rs
src/vectored_handlers/: entry.rs  handler_type.rs  iterator.rs  list.rs  mod.rs  utils.rs
src/windows/: constants.rs  flags.rs  mod.rs  structs.rs  syscalls.rs  utils.rs  wrappers.rs
src/windows/structs/: mod.rs  pe.rs  string.rs
src/windows/syscalls/: mod.rs  stubs.rs
